# data-mining

./: .gitattributes  data.py  embed.py  pyproject.toml
data/: data.jsonl
