[project]
name = "data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.21.1",
    "ruff>=0.7.4",
]
